[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Game/Manager/FakeServerManager/FakeServerManager.gd" type="Script" id=1]

[node name="FakeServerManager" type="Node"]
script = ExtResource( 1 )

[node name="EnvironmentUpdate" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="CastTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="EnvironmentUpdate" to="." method="_on_EnvironmentUpdate_timeout"]
[connection signal="timeout" from="CastTimer" to="." method="_on_CastTimer_timeout"]
